--- a/app/scss/globals/_globals.scss
+++ b/app/scss/globals/_globals.scss
@@ -4,11 +4,16 @@ body, html {
     margin: 0;
     padding: 0;
     font-size: 100%;
-    background-color: blue;
+    font-family: 'Poppins', sans-serif;
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+a, a:visited {
+    text-decoration: none;
 }
