--- a/app/scss/main/_main.scss
+++ b/app/scss/main/_main.scss
@@ -1,2 +1,89 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+@use "../util" as p;
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
+body {
+    background: url(/app/images/bg-intro-mobile.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @include p.break(mobile, infinity) {
+        background: url(/app/images/bg-intro-desktop.png);
+    }
+}
+
+.container {
+    background-color: var(--red);
+    width: 100%;
+    min-height: 100vh;
+    padding: 4rem 5% 3rem 5%;
+
+    @include p.break(mobile, infinity) {
+        display: flex;
+    }
+
+    &__header {
+        text-align: center;
+        margin-bottom: 3rem;
+        color: white;
+        padding-inline: 3%;
+
+        @include p.break(mobile, infinity) {
+        
+        }
+
+        &__h1 {
+            line-height: 1.3;
+            font-size: clamp(1rem, 6.8vw, 2rem);
+            font-weight: 600;
+            margin-bottom: 1.4rem;
+
+            @include p.break(mobile, infinity) {
+            
+            }
+        }
+
+        &__p {
+            font-weight: 500;
+
+            @include p.break(mobile, infinity) {
+            
+            }
+        }
+    }
+
+    &__main-content {
+
+        @include p.break(mobile, infinity) {
+        
+        }
+
+        &__top {
+            width: 100%;
+            padding: 1.2rem 15%;
+            text-align: center;
+            background-color: var(--blue);
+            color: white;
+            border-radius: 11px;
+            margin-bottom: 1.7rem;
+            box-shadow: 0 0.6rem 0.1rem rgba(20, 20, 20, 0.2);
+            
+            &__text {
+                line-height: 1.7;
+
+                & span {
+                    font-weight: 700;
+                }
+            }
+        }
+
+    }
+}
