--- a/app/scss/main/_main.scss
+++ b/app/scss/main/_main.scss
@@ -6,7 +6,14 @@
 }
 
 .attribution a {
-    color: hsl(228, 45%, 44%);
+    color: hsl(0, 0%, 0%);
+}
+
+footer {
+    position: absolute;
+    bottom: 0.5rem;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 body {
@@ -15,60 +22,85 @@ body {
     background-position: center;
     background-repeat: no-repeat;
 
-    @include p.break(mobile, infinity) {
+    @include p.break(tablet, infinity) {
         background: url(/app/images/bg-intro-desktop.png);
     }
 }
 
+.inputcan {
+    position: relative;
+    text-align: right;
+    height: auto;
+}
+
+.errtxt {
+    font-size: 0.9rem;
+    color: var(--red);
+    line-height: 1.5rem;
+}
+
+.errimg {
+    position: absolute;
+    top: 0.75rem;
+    right: 5%;
+    align-self: center;
+}
+
 .container {
-    background-color: var(--red);
+    background-color: hsla(0, 100%, 74%, 0.7);
     width: 100%;
     min-height: 100vh;
     padding: 4rem 5% 3rem 5%;
+    position: relative;
 
-    @include p.break(mobile, infinity) {
+    @include p.break(tablet, infinity) {
         display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        padding: 2rem 10%;
+        gap: 7%;
     }
 
     &__header {
         text-align: center;
         margin-bottom: 3rem;
         color: white;
-        padding-inline: 3%;
+        padding-inline: 8%;
 
-        @include p.break(mobile, infinity) {
-        
+        @include p.break(tablet, infinity) {
+            padding: 0;
+            width: 50%;
+            text-align: left;
         }
 
         &__h1 {
             line-height: 1.3;
-            font-size: clamp(1rem, 6.8vw, 2rem);
+            font-size: clamp(1rem, 6.8vw, 3.4rem);
             font-weight: 600;
             margin-bottom: 1.4rem;
 
-            @include p.break(mobile, infinity) {
-            
+            @include p.break(tablet, infinity) {
+                line-height: 1;
             }
         }
 
         &__p {
             font-weight: 500;
-
-            @include p.break(mobile, infinity) {
-            
-            }
+            line-height: 1.4;
+            font-size: clamp(1rem, 6.8vw, 1.2rem);
         }
     }
 
     &__main-content {
 
-        @include p.break(mobile, infinity) {
-        
+        @include p.break(tablet, infinity) {
+            width: 50%;
         }
 
         &__top {
             width: 100%;
-            padding: 1.2rem 15%;
+            padding: 1.2rem 17%;
             text-align: center;
             background-color: var(--blue);
             color: white;
@@ -81,6 +113,71 @@ body {
 
                 & span {
                     font-weight: 700;
+                }
+            }
+        }
+
+        &__bottom {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            padding: 1rem 5%;
+            gap: 1rem;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0.6rem 0.1rem rgba(20, 20, 20, 0.2);
+
+            & label {
+                position: absolute;
+                left: -3000rem;
+            }
+
+            & .inputcan {
+                width: 100%;
+            }
+
+            & .inputcan input, button {
+                border-radius: 6px;
+                border: 1px solid var(--darkBlue);
+                padding: 1rem 5%;
+                font-weight: 700;
+                width: 100%;
+
+                &:hover {
+                    border-color: var(--green);
+                }
+            }
+
+            & button {
+                font-weight: 400;
+                font-size: 1.2rem;
+                background-color: var(--green);
+                border: none;
+                color: white;
+                box-shadow: 0 0.3rem 0.1rem rgba(20, 20, 20, 0.5);
+                cursor: pointer;
+
+                &:hover {
+                    filter: brightness(1.15);
+                }
+            }
+
+            &__terms {
+                text-align: center;
+                padding: 0 5% 0.5rem 5%;
+                color: var(--grayishBlue);
+                font-size: 0.9rem;
+                font-weight: 500;
+                line-height: 1.4;
+
+                & a {
+                    color: var(--red);
+                    font-weight: 700;
+                    text-decoration: none;
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
                 }
             }
         }
